tests/fail/seal.stderr
error[E0277]: the trait bound `String: SealedSomeGeneric` is not satisfied
  --> tests/fail/seal.rs:19:16
   |
19 |         value: "test".into(),
   |                ^^^^^^^^^^^^^ the trait `SealedSomeGeneric` is not implemented for `String`
   |
   = help: the trait `SealedSomeGeneric` is implemented for `i32`
note: required by a bound in `SomeGeneric`
  --> tests/fail/seal.rs:13:27
   |
13 | pub struct SomeGeneric<T: SealedSomeGeneric> {
   |                           ^^^^^^^^^^^^^^^^^ required by this bound in `SomeGeneric`
